force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <label>טיסה</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>שם טיסה</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>טיסות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>