force-app/main/default/objects/Flight__c/fields/InboundFlightDate__c.field-meta.xml
<CustomField>
    <fullName>InboundFlightDate__c</fullName>
    <label>תאריך טיסה חזור</label>
    <type>Date</type>
</CustomField>