force-app/main/default/objects/Flight__c/fields/OutboundFlightDate__c.field-meta.xml
<CustomField>
    <fullName>OutboundFlightDate__c</fullName>
    <label>תאריך טיסה הלוך</label>
    <type>Date</type>
</CustomField>