force-app/main/default/objects/Flight__c/fields/OutBoundFlightNumber__c.field-meta.xml
<CustomField>
    <fullName>OutBoundFlightNumber__c</fullName>
    <label>מספר טיסה הלוך</label>
    <length>10</length>
    <type>Text</type>
</CustomField>