force-app/main/default/objects/Flight__c/fields/PassengersNumber__c.field-meta.xml
<CustomField>
    <fullName>PassengersNumber__c</fullName>
    <label>כמות נוסעים זמינה</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>