force-app/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OutBoundFlightNumber__c</columns>
    <columns>PassengersNumber__c</columns>
    <columns>OutboundFlightDate__c</columns>
    <columns>InboundFlightDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>